@@ -1,12 +1,18 @@
 % Generated by roxygen2 (4.1.1.9000): do not edit by hand
-% Please edit documentation in R/geom-violin.r
+% Please edit documentation in R/geom-violin.r, R/stat-ydensity.r
 \name{geom_violin}
 \alias{geom_violin}
+\alias{stat_ydensity}
 \title{Violin plot.}
 \usage{
 geom_violin(mapping = NULL, data = NULL, stat = "ydensity",
-  position = "dodge", trim = TRUE, scale = "area", show.legend = NA,
-  inherit.aes = TRUE, ...)
+  draw_quantiles = NULL, position = "dodge", trim = TRUE,
+  scale = "area", show.legend = NA, inherit.aes = TRUE, ...)
+
+stat_ydensity(mapping = NULL, data = NULL, geom = "violin",
+  position = "dodge", adjust = 1, kernel = "gaussian", trim = TRUE,
+  scale = "area", na.rm = FALSE, show.legend = NA, inherit.aes = TRUE,
+  ...)
 }
 \arguments{
 \item{mapping}{The aesthetic mapping, usually constructed with
@@ -16,11 +22,18 @@ at the layer level if you are overriding the plot defaults.}
 \item{data}{A data frame. If specified, overrides the default data frame
 defined at the top level of the plot.}
 
+\item{draw_quantiles}{If \code{not(NULL)} (default), draw horizontal lines
+at the given quantiles of the density estimate.}
+
 \item{position}{Position adjustment, either as a string, or the result of
 a call to a position adjustment function.}
 
 \item{trim}{If \code{TRUE} (default), trim the tails of the violins
 to the range of the data. If \code{FALSE}, don't trim the tails.}
+
+\item{scale}{if "area" (default), all violins have the same area (before trimming
+the tails). If "count", areas are scaled proportionally to the number of
+observations. If "width", all violins have the same maximum width.}
 
 \item{show.legend}{logical. Should this layer be included in the legends?
 \code{NA}, the default, includes if any aesthetics are mapped.
@@ -44,6 +57,14 @@ the default plot specification, e.g. \code{\link{borders}}.}
 
 \item{geom,stat}{Use to override the default connection between
 \code{geom_violin} and \code{stat_ydensity}.}
+
+\item{adjust}{see \code{\link{density}} for details}
+
+\item{kernel}{kernel used for density estimation, see
+\code{\link{density}} for details}
+
+\item{na.rm}{If \code{FALSE} (the default), removes missing values with
+a warning. If \code{TRUE} silently removes missing values.}
 }
 \description{
 Violin plot.
@@ -51,6 +72,19 @@ Violin plot.
 \section{Aesthetics}{
 
 \Sexpr[results=rd,stage=build]{ggplot2:::rd_aesthetics("geom", "violin")}
+}
+
+\section{Computed variables}{
+
+\describe{
+  \item{density}{density estimate}
+  \item{scaled}{density estimate, scaled to maximum of 1}
+  \item{count}{density * number of points - probably useless for violin plots}
+  \item{violinwidth}{density scaled for the violin plot, according to area, counts
+                     or to a constant maximum width}
+  \item{n}{number of points}
+  \item{width}{width of violin bounding box}
+}
 }
 \examples{
 p <- ggplot(mtcars, aes(factor(cyl), mpg))
@@ -84,7 +118,7 @@ p + geom_violin(aes(fill = factor(am)))
 p + geom_violin(fill = "grey80", colour = "#3366FF")
 
 # Show quartiles
-p + geom_violin(quantiles = c(0.25,0.5,0.75))
+p + geom_violin(draw_quantiles = c(0.25,0.5,0.75))
 
 # Scales vs. coordinate transforms -------
 if (require("ggplot2movies")) {
@@ -108,5 +142,9 @@ ggplot(movies, aes(year, budget)) +
 \references{
 Hintze, J. L., Nelson, R. D. (1998) Violin Plots: A Box
 Plot-Density Trace Synergism. The American Statistician 52, 181-184.
+}
+\seealso{
+\code{\link{geom_violin}} for examples, and \code{\link{stat_density}}
+  for examples with data along the x axis.
 }
 
