@@ -1,6 +1,8 @@
 ggplot2 1.0.1.9xxx
 ----------------------------------------------------------------
 
+* `geom_violin()` now has the ability to draw quantile lines (@DanRuderman).
+
 * `geom_histogram()` and `geom_smooth()` now only inform you about the
   default values once per layer, rather than once per panel (#1220).
 
